--- a/Project2_Report.html
+++ b/Project2_Report.html
@@ -199,7 +199,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p>For this part we will focus on the outcome <code>cough_days</code>. Based on what we know of allergic disease, children should only have a response to mouse allergen if they are in fact allergic to mouse allergen. Let’s examine this hypothesis as follows:</p>
 <ol type="1">
 <li><p>Create a new dataset called <code>dataset3yes</code> that contains only those individuals in <code>dataset3</code> who have <code>mouse_allergic == "yes"</code>. Using <code>dataset3yes</code>, fit a linear model with <code>cough_days</code> as the outcome and <code>mouse</code> as the predictor.</p></li>
-<li><p>Create a new dataset called <code>dataset3no</code> that contains only those individuals in <code>dataset3</code> who have <code>mouse_allergic == "yes"</code>. Using <code>dataset3no</code>, fit a linear model with <code>cough_days</code> as the outcome and <code>mouse</code> as the predictor.</p></li>
+<li><p>Create a new dataset called <code>dataset3no</code> that contains only those individuals in <code>dataset3</code> who have <code>mouse_allergic == "no"</code>. Using <code>dataset3no</code>, fit a linear model with <code>cough_days</code> as the outcome and <code>mouse</code> as the predictor.</p></li>
 </ol>
 <p>For each analysis, describe what is the relationship between mouse allergen and days with coughing or wheezing (<code>cough_days</code>). Interpret the coefficient for <code>mouse</code> in each of the models.</p>
 <div class="cell">
