--- a/Project2_Report.html
+++ b/Project2_Report.html
@@ -136,7 +136,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="part-4" class="level2">
 <h2 class="anchored" data-anchor-id="part-4">Part 4</h2>
-<p>In previous studies, males have tended to have higher FEV1 values than females. Fit a linear regression model with FEV1 as the outcome and gender as the predictor. Using the results of the model fit, answer the following questions:</p>
+<p>In previous studies, males have tended to have higher FEV1 values than females. Fit a linear regression model with FEV1 as the outcome and gender as the predictor. <strong>Using the results of the model fit</strong>, answer the following questions:</p>
 <ol type="1">
 <li><p>On average in this dataset, which gender has higher FEV1 values?</p></li>
 <li><p>On average in this dataset, what is the difference in FEV1 values between males and females?</p></li>
